# webpilot-ai

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.backend.dev  Dockerfile.frontend.dev  README.md  agent.py  database.py  docker-compose.dev.yml  index.html  pentest_agent.py  playwright_script.py  pyproject.toml  requirements.txt  server.py  utils.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Footer.jsx  Header.jsx
frontend/src/pages/: History.jsx  Home.jsx  Pentest.jsx  Settings.jsx
src/agent_tools/: tools.py
src/browser_controller/: controller.py
